LC : add #31, #1608, #2812 and refine #140, #463, #827